<resources>
    <string name="now_playing">Now Playing</string>
    <string name="dialog_title">Choose one</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="reportsong_title">Report</string>
    <string name="search_hint">Type to search a song&#8230;</string>
    <string name="title_changelog">Change log</string>
    <string name="changelog_close">Close</string>
    <string name="changelog_version_1">&lt;font color="#524ef8">&lt;b>v1.0&lt;/font>&lt;/b>&lt;br></string>
    <string name="changelog_change_1">&lt;i>- Initial release&lt;/i>&lt;br>&lt;br></string>
    <string name="changelog_version_2">&lt;font color="#524ef8">&lt;b>v1.0.1&lt;/font>&lt;/b>&lt;br></string>
    <string name="changelog_change_2">&lt;i>- Added theme support to nav. drawer&lt;br>
          - ~~Fixed issue #5 (github)~~&lt;br>
          - Minor lyrics correction&lt;br>
          - Other minor fixes&lt;br>&lt;/i>&lt;br></string>
    <string name="changelog_version_3">&lt;font color="#524ef8">&lt;b>v1.0.2&lt;/font>&lt;/b>&lt;br></string>
    <string name="changelog_change_3">- Fixed nav drawer theme issues&lt;br>
          - Modified nav drawer for tablets&lt;br>
          - Fixed various options in Settings (see Full Changelog)&lt;br>
          - Added new Report UI&lt;br>&lt;br></string>
	<string name="crash_toast_text">Thanks, your report is being sent.
	</string>
    <string name="search_title">Search a song</string>
    <string name="all_songs">All Songs</string>
    <string name="play_title">Show Now Playing Track</string>
    <string name="exit_title">Confirm before exit</string>
    <string name="exit_summary_on">Enabled</string>
    <string name="exit_summary_off">Disabled</string>
    <string name="report_title">Report this song</string>
    <string name="report_menu">Send</string>
    <string name="disclaimer_title">Disclaimer</string>
    <string name="license_title">Open Source Licenses</string>
    <string name="license_summary">License details for open source software</string>
    <string name="label_title">Information about track</string>
    <string name="settings_title">Settings</string>
    <string name="showcase_button_ok">OK</string>
    <string name="scroll_title">Automatic Scrolling</string>
    <string name="scroll_summary_on">Not Implemented</string>
    <string name="scroll_summary_off">Not Implemented</string>
    <string name="display_title">Screen Timeout</string>
    <string name="display_summary_on">Screen won\'t turn off</string>
    <string name="display_summary_off">Default system values</string>
    <string name="touch_title">Touch</string>
    <string name="touch_summary_on">Disabled in lyrics</string>
    <string name="touch_summary_off">Recommended for auto-scrolling</string>
    <string name="greenday_title">Green Day</string>
    <string name="theme_title">Interface</string>
    <string name="themechooser_title">Theme Chooser</string>
    <string name="themechooser_dialog">Choose a theme</string>
    <string name="themes_list_default">Default</string>
    <string name="apply_theme_title">Apply Theme</string>
    <string name="apply_theme_summary">Apply selected theme</string>
    <string name="storage_title">Storage</string>
    <string name="cache_title">Clear Cache</string>
    <string name="cache_summary">Clears cache memory</string>
    <string name="hints_title">Review Hints</string>
    <string name="hints_summary">Missed any instruction? This option is for you</string>
    <string name="changelog_title">Changelog</string>
    <string name="changelog_summary">List of changes in app</string>
    <string name="store_title">Green Day Store</string>
    <string name="store_summary">Support Green Day, purchase original stuff.</string>
    <string name="donate_title">Donate version</string>
    <string name="donate_summary">Help me pay play store hosting charges</string>
    <string name="about_title">About</string>
    <string name="aboutapp_title">About the app.</string>
    <string name="aboutgd_title">About Green Day</string>
    <string name="version_title">Build Version</string>
    <string name="version_summary">v1.0.1</string>
    <string name="source_title">Application sources</string>
    <string name="source_summary">View app source code</string>
    <string name="members_title">Members</string>
    <string name="members_summary">List of Green Day members</string>
    <string name="albums_title">Albums</string>
    <string name="albums_summary">Released till now</string>
    <string name="member1_title">Billie Joe Armstrong</string>
    <string name="member1_summary">Lead Vocals, Guitars, Piano, Harmonica</string>
    <string name="member2_title">Mike Dirnt</string>
    <string name="member2_summary">Bass Guitar, Backing Vocals</string>
    <string name="member3_title">Tré Cool</string>
    <string name="member3_summary">Drums, Percussion, Backing Vocals</string>
    <string name="member4_title">Jason White</string>
    <string name="member4_summary">Guitars, Backing Vocals</string>
    <string name="member5_title">Jeff Matika</string>
    <string name="member5_summary">Rhythm Guitar, Backing Vocals</string>
    <string name="member6_title">Jason Freese</string>
    <string name="member6_summary">Keyboards, Piano, Saxophone, Trombone, Backing Vocals</string>
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>1039/Smooth&#8230;</item>
        <item>Kerplunk</item>
        <item>Dookie</item>
        <item>Insomniac</item>
        <item>Nimrod</item>
        <item>Warning</item>
        <item>International Superhits!</item>
        <item>Shenanigans</item>
        <item>American Idiot</item>
        <item>21st Century Breakdown</item>
        <item>¡Uno!</item>
        <item>¡Dos!</item>
        <item>¡Tré!</item>
        <item>Extras</item>
        
        
    </string-array>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="app_name">Green Day Lyrics</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="reportsong">Report this song</string>
    <string name="album1_title">39/Smooth</string>
    <string name="album1_summary">April 13, 1990  (Good Friday)</string>
    <string name="album2_title">Kerplunk</string>
    <string name="album2_summary">January 17, 1992</string>
    <string name="album3_title">Dookie</string>
    <string name="album3_summary">February 1, 1994</string>
    <string name="album4_title">Insomniac</string>
    <string name="album4_summary">October 10, 1995</string>
    <string name="album5_title">Nimrod</string>
    <string name="album5_summary">October 14, 1997</string>
    <string name="album6_title">Warning</string>
    <string name="album6_summary">October 3, 2000</string>
    <string name="album7_title">International Superhits</string>
    <string name="album7_summary">November 13, 2001</string>
    <string name="album8_title">Shenanigans</string>
    <string name="album8_summary">July 2, 2002</string>
    <string name="album9_title">American Idiot</string>
    <string name="album9_summary">September 21, 2004</string>
    <string name="album10_title">21st Century Breakdown</string>
    <string name="album10_summary">May 15, 2009</string>
    <string name="album11_title">¡UNO!</string>
    <string name="album11_summary">September 21, 2012</string>
    <string name="album12_title">¡DOS!</string>
    <string name="album12_summary">November 9, 2012 (My B\'Day :D)</string>
    <string name="album13_title">¡TRÉ!</string>
    <string name="album13_summary">December 7, 2012</string>
    <string name="rate_title">Rate the app</string>
    <string name="rate_summary">Please give a good rating :-)</string>
    <string name="miscellaneous_title">Miscellaneous</string>
    <string name="americanidiot_title">American Idiot</string>
    <string name="jos_title">Jesus Of Suburbia</string>
    <string name="holiday_title">Holiday</string>
    <string name="bobd_title">Boulevard of Broken Dreams</string>
    <string name="awtw_title">Are We The Waiting</string>
    <string name="stjimmy_title">St. Jimmy</string>
    <string name="givemenov_title">Give Me Novacaine</string>
    <string name="shesarebel_title">She\'s A Rebel</string>
    <string name="extordgirl_title">Extraordinary Girl</string>
    <string name="letterbomb_title">Letterbomb</string>
    <string name="wmuwse_title">Wake Me Up When September Ends</string>
    <string name="homcom_title">Homecoming</string>
    <string name="whatshername_title">Whatshername</string>
    <string name="nuclearfamily_title">Nuclear Family</string>
    <string name="staythenight_title">Stay The Night</string>
    <string name="carpediem_title">Carpe Diem</string>
    <string name="letyourselfgo_title">Let Yourself Go</string>
    <string name="killthedj_title">Kill The DJ</string>
    <string name="fellforyou_title">Fell For You</string>
    <string name="lossofcontrol_title">Loss Of Control</string>
    <string name="troublemaker_title">Troublemaker</string>
    <string name="angelblue_title">Angel Blue</string>
    <string name="sweetsixt_title">Sweet 16</string>
    <string name="rustyjames_title">Rusty James</string>
    <string name="ohlove_title">Oh Love</string>
    <string name="cutonight_title">See You Tonight</string>
    <string name="fucktime_title">Fuck Time</string>
    <string name="stopredflash_title">Stop When Red Lights Flash</string>
    <string name="lazybones_title">Lazy Bones</string>
    <string name="wildone_title">Wild One</string>
    <string name="makeoutparty_title">Makeout Party</string>
    <string name="strayheart_title">Stray Heart</string>
    <string name="ashley_title">Ashley</string>
    <string name="babyeyes_title">Baby Eyes</string>
    <string name="ladycobra_title">Lady Cobra</string>
    <string name="nightlife_title">Nightlife</string>
    <string name="wowthatsloud_title">Wow! That\'s Loud</string>
    <string name="amy_title">Amy</string>
    <string name="brutallove_title">Brutal Love</string>
    <string name="missingyou_title">Missing You</string>
    <string name="avesrnde_title">8th Avenue Serenade</string>
    <string name="dramaqueen_title">Drama Queen</string>
    <string name="kid_title">X-Kid</string>
    <string name="sexdrugs_title">Sex, Drugs &amp; Violence</string>
    <string name="littleboytrain_title">Little Boy Named Train</string>
    <string name="amanda_title">Amanda</string>
    <string name="walkaway_title">Walk Away</string>
    <string name="dirtybastards_title">Dirty Rotten Bastards</string>
    <string name="ninetyninerev_title">99 Revolutions</string>
    <string name="theforgotten_title">The Forgotten</string>
    <string name="songofcentuary_title">Song Of The Centuary</string>
    <string name="tcb_title">21st Century Breakdown</string>
    <string name="knowyourenemy_title">Know Your Enemy</string>
    <string name="vivalagloria_title">¡Viva La Gloria!</string>
    <string name="lobotomy_title">Before The Lobotomy</string>
    <string name="inferno_title">Christian\'s Inferno</string>
    <string name="lastnight_title">Last Night On Earth</string>
    <string name="eastjesus_title">East Jesus Nowhere</string>
    <string name="peacemaker_title">Peacemaker</string>
    <string name="lastamerican_title">Last Of American Girls</string>
    <string name="murdercity_title">Murder City</string>
    <string name="vivalagloria2_title">¿Viva La Gloria? (Little Girl)</string>
    <string name="restlessheart_title">Restless Heart Syndrome</string>
    <string name="horseshoes_title">Horseshoes And Handgranades</string>
    <string name="staticage_title">The Static Age</string>
    <string name="guns_title">21 Guns</string>
    <string name="americaneulogy_title">American Eulogy</string>
    <string name="seethelight_title">See The Light</string>
    <string name="suffocate_title">Suffocate</string>
</resources>