<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
   <!--  <item android:id="@+id/settings" android:title="@string/settings" />
	<item android:id="@+id/reportsong" android:title="@string/reportsong" /> -->
    
	<!-- SearchView
	<item android:id="@+id/action_search"
          android:title="@string/search_title"
          android:icon="@drawable/ic_search"
          android:showAsAction="always"
          android:actionViewClass="android.widget.SearchView" />   -->
    
   <item android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="always"
        android:title="@string/search_title"/>
   
   <item android:id="@+id/action_play"
        android:icon="@drawable/ic_action_play"
        android:showAsAction="always"
        android:title="@string/play_title"/> 
        
   <item android:id="@+id/reportsong"
        android:icon="@drawable/ic_action_error"
        android:showAsAction="always"
        android:title="@string/report_title"/>
   
   <item android:id="@+id/action_label"
        android:icon="@drawable/ic_action_labels"
        android:showAsAction="always"
        android:title="@string/label_title"/>
          
   <item android:id="@+id/settings"
        android:icon="@drawable/ic_action_settings"
        android:showAsAction="always"
        android:title="@string/settings_title"/>       
																	
</menu>
